# idyntree-ipopt-testing

./: CMakeLists.txt  main.cpp
